# common-gles

./: .gitignore  Readme.md
X11/: Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  Makefile  Makefile.old  main.cpp  simple_triangle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/example/jm/android_simple_triangle/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Bootstrap.cpp  Bootstrap.h  Renderer.cpp  Renderer.h  native-lib.cpp
android/app/src/main/java/com/example/jm/android_simple_triangle/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/jm/android_simple_triangle/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
common/: Context.cpp  Context.h  IRenderer.h  IRendererFactory.h
src/: Renderer.cpp  Renderer.h
triangle/: Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h
